# attention-cavros

./: CMakeLists.txt  README.md  package.xml
config/: detector.yaml
detector/: CMakeLists.txt  package.xml
detector/config/: detector.yaml
detector/include/detector/: Detector.hpp
detector/launch/: attention.launch.py
detector/src/: detector_main.cpp
detector/src/detector/: Detector.cpp
include/attention-cavros/: Detector.hpp  HeadController.hpp  PoseInMap.hpp
launch/: attention.launch.py
src/: attention_main.cpp
src/attention-cavros/: Detector.cpp  HeadController.cpp  PoseInMap.cpp
tracking/: CMakeLists.txt  package.xml
tracking/config/: detector.yaml
tracking/include/tracking/: HeadController.hpp  PoseInMap.hpp
tracking/launch/: attention.launch.py
tracking/src/: tracking_main.cpp
tracking/src/attention-cavros/: HeadController.cpp
tracking/src/tracking/: HeadController.cpp  PoseInMap.cpp
