<?xml version="1.0"?>

<?xml-model 
    href="http://download.ros.org/schema/package_format3.xsd" 
    schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
    <name>detector</name>
    <version>0.0.1</version>  
    <description>Attention task for Tiago</description>
    <maintainer email="c.sanchezro.2018@alumnos.urjc.es">Cristian Sanchez Rodriguez</maintainer> 
    <license>Apache License, Version 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>control_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>gazebo_msgs</depend>
    <depend>tf2_msgs</depend>
    <depend>ros2_knowledge_graph</depend>

    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_gtest</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
